--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "dayjs": "^1.11.13",
     "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-auto-image-slider": "^1.0.0",
