--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
+    "lucide-react": "^0.511.0",
     "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-auto-image-slider": "^1.0.0",
